Fix field spacing

--- a/src/routes/Account/components/Rooms/EditRoom/EditRoom.css
+++ b/src/routes/Account/components/Rooms/EditRoom/EditRoom.css
@@ -1,3 +1,7 @@
 .btn {
   margin-bottom: var(--input-margin);
 }
+
+.field {
+  margin-bottom: var(--input-margin);
+}
